--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="assets/cook-book.svg" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <script src="https://developer.edamam.com/attribution/badge.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap"
       rel="stylesheet"
